# termbrain

./: .claude-context.md  .gitignore  .termbrain-context.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  Makefile  PROJECT_SUMMARY.md  README-rust.md  README.md  SECURITY.md  SHELL_INTEGRATION.md  SYSTEM_ANALYSIS.md  clean-architecture-summary.md  demo-predictive.sh  install.sh  package.json  refactor-plan.md  test-clean-arch.sh  test-export.md  test-install.sh  test-workflow.sh  test-workflows.sh  uninstall.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  rust-ci.yml  rust.yml  test.yml
.sqlx/: query-0171f0600f8aebf3f0c4751a9e8dcb57d1643a4ed0d5fbe5bbbdee139ffb2185.json  query-04989b9018d35ee83ec2d068c6c6aad222487d4ddc38d4b6fccaa162b7ee9c56.json  query-0670dc4b5653ddb7656617808b4fd7abe1b5b5a2182e5f1380acf05910fd9438.json  query-095165c9c91f210b147a30b84a41fee38cf945ffa4842f1ee49552151067d2e3.json  query-25892b5fb0687dbde23faf3b22b933c854ad03de783cfbe5cbbc4f9921786d78.json  query-2cd56c17e165d7c7d68af4aaacdafe8b6838124671e0a33799bcdf70c6f21f5a.json  query-355c283c6fc1aa3d811967a002fc02cb926d72fa6163737a2d61d715244985bc.json  query-3db2d5ad18e8f6e195c9a83433f5ae7fe2b237be2bded4ed478788dce7699f01.json  query-3e86ce1eabf4dfafc351b8c712f60b854dfb8e325f2708a2110f4ffef3f88526.json  query-43004d1ab81919b1f5c4ae2a39bdcfb9d7c81be1e9155417a1886ac0eaa2fcd2.json  query-486996652645a06b48b02c62fbb86cdfd360f5ac928b4d1eda1082cb1d69d7aa.json  query-4db44e549223cbac11ab3d31fed6dae402e0c413686366578ec937cf488ede32.json  query-53f267651a52caa4914fcb3e8cc48170fcf333b06c25491c207ebe72084b2bda.json  query-598f9d35ccbe4a5396b7fc16562e7d715f889ea9fc03c2829b155a565b62b37c.json  query-5af671534129e0cea19af339b7c60c0b1e850d4585418a4f982ac871f00bc1b4.json  query-61700bccba05cbb639d840d28993eaa4859da9fd981fc3896cd48636b7222874.json  query-619c6a41c58b1c7885683c596a2fe31302c4fc7861316911cbc5e7e6ab66d64c.json  query-682b872ec52acd5c062a7e8f82c65a7fa4c6bd7ccab8e82ff566f42ba81d96f9.json  query-6bfad4c6ede6608d6855906097fc1faaef56b61095b99a3d1f115e4c59d0ae01.json  query-6d6d83f7a472abe9aebca550b0c34235ffdbfb4ad93223e54655dae9e0f324ae.json  query-6dc13356f0f4b3b47d1689957f53d92d2a778e081d894bd134e01b07e99dfa28.json  query-6faae6cb503b3f3daebcbae9b1dfa314a47008b0a8476a992d1bf2010d8a1126.json  query-736e2f7829da0cf1290984a1a5b91d4aebdb97a5f6d9da9131dade6da8bb6850.json  query-7a3225dbde6afcfcad86cd113908c89cb69dc7186d8513358c19f07fe4a577bc.json  query-820eb5d661e7b175f415830c19c9b43e2e3c16c17cffc0f86926e25a23f4cb38.json  query-825c3f34b0f3f570bd74a0ab03c1d52858af8226149e1662c659c8daac459928.json  query-adc65291fea5522d33494bf42e465c186edee5cfdb6110d18d92f62fd8484b5f.json  query-b5c567c27856069bcee22e43683afadc26f5b5485b9cefe36caa4e70cdb52bd2.json  query-b6e1c7579c26ff4c5c03fab7d49783b81562e579804f092f34b16099ecca2c6c.json  query-b6ec3bbf87f9159b45f8771e8b0ea42c936e0eeaf5f4a2f96b1c79b90451d076.json  query-c3de06fe6eb6a452dd023ab6227e79863464f6fd27eafa2d8948346b4d9a06de.json  query-ca89503dded484241f45380466653d0d23cb214669baab5d190ef68841b52545.json  query-d50eb6d65948511f9219077ec12b9f3512cea4573c2b05ebe23e195a3a1042e4.json  query-dbf1f784bcd8e48fdd87ea20a9b1d4f028d83bf722782549b11ca4bba2c77ee0.json  query-e5948bddeda483b185a7c4d4ca721ad7fa4f3eeae2bcaf99bf701b416534b570.json  query-e83eeb98dfa47acfff4f19106f6e3960b4ce1ef30cfa034ef57b5314bcc654c9.json  query-ed17ff84c4570121751b7b6c805c83d7e3f3467e5293e0c0984af5e0b181e63a.json  query-fb8bd15bc7dbb9e5dd5953b14d51710688b60903ea550a4f898c2d7b8493708d.json
crates/termbrain-cli/: Cargo.toml
crates/termbrain-cli/src/: config.rs  garbage_collector.rs  logging.rs  main.rs  output.rs  pattern_detector.rs  shutdown.rs
crates/termbrain-cli/src/commands/: mod.rs
crates/termbrain-core/: Cargo.toml
crates/termbrain-core/src/: lib.rs  validation.rs
crates/termbrain-core/src/domain/: mod.rs
crates/termbrain-core/src/domain/entities/: mod.rs  tests.rs
crates/termbrain-core/src/domain/repositories/: mod.rs
crates/termbrain-core/src/domain/value_objects/: mod.rs
crates/termbrain-storage/: Cargo.toml
crates/termbrain-storage/src/: embeddings.rs  lib.rs
crates/termbrain-storage/src/sqlite/: command_repository.rs  command_repository_test.rs  connection.rs  mod.rs
docs/: DEPLOYMENT.md  PRODUCTION_CHECKLIST.md  README.md  api.md  architecture.md  ci-and-testing-plan.md  clean-architecture.md  complete-refactoring-summary.md  getting-started.md  privacy.md  testing-and-ci-implementation.md
docs/examples/: README.md
docs/images/: README.md
examples/: .env.example  README.md  workflow-examples.sh
examples/claude-integration/: README.md  how-to-use-tb-in-claude.md  sample-claude-context.md  training-guide.md  workflow-examples.md
examples/claude_integration/: Cargo.toml  README.md
examples/claude_integration/src/: claude_client.rs  main.rs
lib/: capture.sh  patterns.sh  safety.sh  semantic.sh  workflows.sh
migrations/: 001_initial.sql  002_add_vector_search.sql  20240101000000_initial.sql
providers/: claude.sh  copilot.sh  cursor.sh  gemini.sh
scripts/: release.sh
shell-integration/: README.md  install.sh  uninstall.sh
src/: lib.rs  main.rs  termbrain-cognitive.sh  termbrain-enhanced.sh  termbrain.sh
tests/: README.md  docker-test.sh  quick_test.sh  run_all_tests.sh  run_tests.sh  smoke_test.sh  test-workflows.sh  test_cognitive.sh  test_core.sh  test_enhanced.sh  test_helper.sh  test_integration.sh  test_platform.sh  test_shell_security.sh  test_workflows.sh
(+114 files in other folders)
