[package]
name = "termbrain-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "tb"
path = "src/main.rs"

[dependencies]
termbrain-core = { path = "../termbrain-core" }
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true