[package]
name = "claude-integration-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-analyzer"
path = "src/main.rs"

[dependencies]
# TermBrain integration
termbrain-core = { path = "../../crates/termbrain-core" }
termbrain-storage = { path = "../../crates/termbrain-storage" }

# HTTP client for Claude API
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Async utilities
futures = "0.3"

# Regular expressions for sanitization
regex = "1.0"

# Rate limiting
governor = "0.6"

# Caching
moka = { version = "0.12", features = ["future"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }